; ModuleID = '/home/carl/AnghaBench/kphp-kdb/image/extr_image-engine.c_queue_poll.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/image/extr_image-engine.c_queue_poll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.forth_request = type { %struct.forth_request* }

@without_output_free_list = common dso_local global %struct.forth_request zeroinitializer, align 8
@with_output_free_list = common dso_local global %struct.forth_request zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.forth_request* ()* @queue_poll to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.forth_request* @queue_poll() #0 {
  %1 = alloca %struct.forth_request*, align 8
  %2 = alloca %struct.forth_request*, align 8
  %3 = load %struct.forth_request*, %struct.forth_request** getelementptr inbounds (%struct.forth_request, %struct.forth_request* @without_output_free_list, i32 0, i32 0), align 8
  store %struct.forth_request* %3, %struct.forth_request** %2, align 8
  %4 = load %struct.forth_request*, %struct.forth_request** %2, align 8
  %5 = icmp eq %struct.forth_request* %4, @without_output_free_list
  br i1 %5, label %6, label %14

6:                                                ; preds = %0
  %7 = load %struct.forth_request*, %struct.forth_request** getelementptr inbounds (%struct.forth_request, %struct.forth_request* @with_output_free_list, i32 0, i32 0), align 8
  store %struct.forth_request* %7, %struct.forth_request** %2, align 8
  %8 = load %struct.forth_request*, %struct.forth_request** %2, align 8
  %9 = icmp eq %struct.forth_request* %8, @with_output_free_list
  br i1 %9, label %10, label %11

10:                                               ; preds = %6
  store %struct.forth_request* null, %struct.forth_request** %1, align 8
  br label %18

11:                                               ; preds = %6
  %12 = load %struct.forth_request*, %struct.forth_request** %2, align 8
  %13 = call i32 @forth_request_unload_prog(%struct.forth_request* %12)
  br label %14

14:                                               ; preds = %11, %0
  %15 = load %struct.forth_request*, %struct.forth_request** %2, align 8
  %16 = call i32 @tlist_remove(%struct.forth_request* @without_output_free_list, %struct.forth_request* %15)
  %17 = load %struct.forth_request*, %struct.forth_request** %2, align 8
  store %struct.forth_request* %17, %struct.forth_request** %1, align 8
  br label %18

18:                                               ; preds = %14, %10
  %19 = load %struct.forth_request*, %struct.forth_request** %1, align 8
  ret %struct.forth_request* %19
}

declare dso_local i32 @forth_request_unload_prog(%struct.forth_request*) #1

declare dso_local i32 @tlist_remove(%struct.forth_request*, %struct.forth_request*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
